<resources>
    <string name="app_name">Yummy Express</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_view_hint">Search keywords…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="featured_products">Featured Products</string>
    <string name="buy_grocery">Buy Grocery</string>
    <string name="fast_delivery">Fast Delivery</string>
    <string name="enjoy_quality_food">Enjoy Quality Food</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consetetur \nsadipscing elitr, sed diam nonumy</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="see_all">See All</string>
    <string name="your_cart_is_empty">Your cart is empty !</string>
    <string name="empty_cart_description">It looks like you haven\'t added a single product to the list</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="category_is_empty">Response is empty</string>
    <string name="empty_list_description">It looks like this query doesn\'t have a single product</string>
    <string name="detail_category">Category: %s</string>
    <string name="detail_brand">Brand: %s</string>
    <string name="detail_country">Country: %s</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping_charges">Shipping charges</string>
    <string name="total">Total</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="street_house_number">Street, house number</string>
    <string name="apartment">Apartment</string>
    <string name="floor">Floor</string>
    <string name="entrance">Entrance</string>
    <string name="please_ensure_that_everything_is_correct">Please ensure that everything is correct</string>
    <string name="ready">Ready</string>
    <string name="all_fields_should_be_filled">All fields should be filled</string>
    <string name="for_this_feature_we_need_to_access_your_location">For this feature we need to access your location</string>
    <string name="failed_to_load_item_count">Failed to load item count</string>
    <string name="about_me">About me</string>
    <string name="my_orders">My orders</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark theme</string>
    <string name="sign_out">Sign out</string>
    <string name="payment">Payment</string>
    <string name="street">Address: %s</string>
    <string name="apartment_with_value">Apartment: %d</string>
    <string name="entrance_with_value">Entrance: %d</string>
    <string name="floor_with_value">Floor: %d</string>
    <string name="products">Products</string>
    <string name="order">Order</string>
    <string name="your_order_was_successfully_placed">Your order was successfully placed</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="order_total">Total: %s</string>
    <string name="order_item_count">Items: %d</string>
    <string name="don_t_have_an_account">Don’t have an account ?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create account</string>
    <string name="quickly_create_account">Quickly create account</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="skip_for_now">Login as guest</string>
    <string name="guest">Guest</string>
    <string name="click_button_to_navigate_auth_screen">Click button to navigate auth screen</string>
    <string name="invalid_credentials_please_try_again">Invalid credentials, please try again</string>
    <string name="voice_recognizer">Voice recognizer</string>
    <string name="tap_to_start_recording">Tap to start recording...</string>
    <string name="about_company_text"><b>Yummy-Express</b> aims to provide a convenient and efficient solution for customers who prefer the ease of ordering groceries online and having them delivered directly to their doorstep. With time becoming increasingly valuable in the modern age, <b>Yummy-Express</b> is dedicated to bridging the gap between hectic lifestyles and the need for high-quality, fresh groceries.</string>
    <string name="listening">Listening...</string>
    <string name="scanning">Scanning...</string>
    <string name="by_default">By default</string>
    <string name="price_in_descending_order">Price in descending order</string>
    <string name="price_in_ascending_order">Price in ascending order</string>
    <string name="sort_by">Sort by</string>
    <string name="filter">Filter</string>
    <string name="google_map_api_key">AIzaSyAAb0a4m7SIy9cK4Iw49e0NYo-aTZ2wkvc</string>
    <string name="onboarding_description_1">Order groceries and essentials directly from your phone.</string>
    <string name="onboarding_description_2">Get your groceries delivered to your doorstep in minutes.</string>
    <string name="onboarding_description_3">Enjoy fresh and high-quality food products.</string>
    <string name="here_you_can_see_or_update_your_information">Here you can see you information</string>
    <string name="account_page">Account Page</string>
    <string name="update">Update</string>
    <string name="forgot_you_password">Forgot your password?</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="recover_your_password_via_email">Recover your password via email</string>
    <string name="send">Send</string>
    <string name="already_have_a_reset_code">Already have a reset code?</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_uppercase">Reset Password</string>
    <string name="fill_following_fields_and_set_your_new_password">Fill following fields and set your new password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">Confirm New Password</string>
    <string name="reset_code">Reset Code</string>
    <string name="go_to_sign_in">Go to sign in</string>
    <string name="successfully_reset_password">Successfully reset password?</string>
    <string name="status">Status</string>
    <string name="address">Address</string>
</resources>